# cv_claude_course

./: .gitignore  README.md  main.py
.opencode/: opencode.db-shm  opencode.db-wal
cv_course/: README.md  Resources.md  pyproject.toml
cv_course/practice/: distance_measure.py  module_2.ipynb  module_2_calibration.ipynb  module_2_image_effects.ipynb  module_2_polar.ipynb  mouse_events_demo.py  solve_linear.ipynb  solve_linear_eqations.py  vectors_operation.py
cv_course/practice/module_2_geometry_and_projective/: __init__.py  day_5_6.ipynb  day_5_6_eignevectors.md  module_2.ipynb  module_2_calibration_script.py  module_2_challenge_image_to_art.ipynb  module_2_cl_demo.ipynb  module_2_cl_demo_2.ipynb  module_2_homogenuos_coordinates.ipynb  module_2_image_effects.ipynb  module_2_transformation.ipynb  mouse_events_demo.py
cv_course/practice/module_2_geometry_and_projective/visual_effects/: transformers.py
cv_course/practice/module_3_signal_processing/: 1_fft_fundamental_properties.ipynb  2_freq_domain_sig_analysis.ipynb  3_convolution.ipynb  6_fft_and_image_frequency_analysis.ipynb  common.py
cv_course/practice/module_4/: char_recognition.py  convert_between_color_spaces.ipynb  convert_color_space_bgr_2_gray.py  convert_color_space_bgr_2_hsv.py  convert_color_space_bgr_2_lab.py  convert_color_space_bgr_2_rgb.py  convert_color_space_bgr_2_ycrcb.py  convolution.ipynb  histogram_equalization.ipynb  liner_non_linear_convol_filter.ipynb  number_plate.ipynb
cv_course/practice/visual_effects/: __main__.py
methodology/: FFT_Practical_Assignments_Guide.md
